--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-scripts": "3.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start:server": "DEBUG=server:* node ./server/bin/www",
+    "start:client": "react-scripts start",
+    "start": "npm run start:server & npm run start:client",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
