--- a/server/package.json
+++ b/server/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./app.js"
   },
   "dependencies": {
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
-    "express": "~4.16.1"
+    "express": "~4.16.1",
+    "socket.io": "^2.3.0"
   }
 }
