--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
+    "start": "npm run start:server & npm run start:client",
     "start:server": "npm run --prefix server start",
     "start:client": "react-scripts start",
-    "start": "npm run start:server & npm run start:client",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build:client": "react-scripts build",
+    "test:client": "react-scripts test",
+    "eject:client": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
