--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "npm run start:server & npm run start:client",
