--- a/package.json
+++ b/package.json
@@ -1,40 +1,14 @@
 {
   "name": "soundboard",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "howler": "^2.1.3",
-    "random-color": "^1.0.1",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0",
-    "socket.io-client": "^2.3.0",
-    "styled-components": "^5.0.1"
-  },
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "start": "npm run start:server & npm run start:client",
     "start:server": "npm run --prefix server start",
-    "start:client": "react-scripts start",
-    "build:client": "react-scripts build",
-    "test:client": "react-scripts test",
-    "eject:client": "react-scripts eject"
+    "start:client": "npm run --prefix client start"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
