--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
 	"name": "soundboard",
 	"version": "1.0.0",
 	"scripts": {
-		"start:client": "web-dev-server --open --root-dir ./client --watch --port 8000",
-		"start:static": "web-dev-server --root-dir ./static --port 3002",
-		"start:server": "deno run --allow-read --allow-env --allow-net --unstable ./server/index.ts"
+		"start:client": "cd ./client && npm start",
+		"start:static": "cd ./static && npm start",
+		"start:server": "cd ./server && npm start"
 	},
 	"license": "UNLICENSED",
 	"devDependencies": {
