--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,6 @@
 	"name": "client",
 	"version": "1.0.0",
 	"scripts": {
-		"start": "web-dev-server --open --watch --port 8000"
+		"serve": "web-dev-server --open --watch --port 8000"
 	}
 }
