--- a/static/package.json
+++ b/static/package.json
@@ -2,6 +2,6 @@
 	"name": "client",
 	"version": "1.0.0",
 	"scripts": {
-		"start": "web-dev-server --port 3002"
+		"serve": "web-dev-server --port 3002"
 	}
 }
