--- a/static/package.json
+++ b/static/package.json
@@ -1,7 +1,8 @@
 {
+	"type": "module",
 	"name": "client",
 	"version": "1.0.0",
 	"scripts": {
-		"serve": "web-dev-server --port 3002"
+		"serve": "web-dev-server"
 	}
 }
